Club selection, refactored round data collector

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,7 @@
                 <li><a class="menu-item" href="#/list">List</a></li>
 
                 <li class="menu-item-divided">
+                    <a class="menu-item" href="#/settings">Settings</a>
                     <a class="menu-item" href="#/about">About</a>
                 </li>
             </ul>
