--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -80,10 +80,13 @@
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
 <script src="js/controllers.js"></script>
+<script src="js/analysiscontrollers.js"></script>
 <script src="js/directives.js"></script>
 
 <script src="components/underscore/underscore.js"></script>
 <script src="components/toastr/toastr.min.js"></script>
+<script src="lib/Chart.min.js"></script>
+<script src="bower_components/ng-chartjs/src/angular-chartjs.js"></script>
 
 
 </body>
