--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,28 +46,6 @@
     </div>
 </div>
 
-
-<!--
-<nav class="navbar navbar-inverse" role="navigation" ng-controller="NavigationController">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Caddie</a>
-    </div>
-    <div class="collapse navbar-collapse" id="navbar-collapse-01">
-        <ul class="nav navbar-nav">
-            <li><a href="" ng-click="newRound()">New round</a></li>
-            <li><a href="#/list"> Earlier rounds</a></li>
-            <li><a href="#/errors"> Errors</a></li>
-        </ul>
-    </div>
-</nav>-->
-
-
 <script src="components/jquery/jquery.min.js"></script>
 <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="components/menu.js"></script>
@@ -79,6 +57,7 @@
 <script src="components/angular-touch/angular-touch.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
+<script src="js/analysisservices.js"></script>
 <script src="js/controllers.js"></script>
 <script src="js/analysiscontrollers.js"></script>
 <script src="js/directives.js"></script>
